--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ng7</title>
-    <base href="https://namangupta89.github.io/myangapp/ng7">
+    <title>Fleet Management System</title>
+    <base href="/" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -32,5 +33,5 @@
       
 
     <app-root></app-root>
-  <script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="es2015-polyfills.67c5cff8371af1f9a1d4.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="main.eb82bd11b8c3f39cbc6a.js"></script></body>
+  <script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="es2015-polyfills.67c5cff8371af1f9a1d4.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="main.516a36ca977433c69262.js"></script></body>
 </html>
